force-app/main/default/objects/SVMXA360__SM_TA_Template__c/SVMXA360__SM_TA_Template__c.object-meta.xml
<CustomObject>
    <description>Object to store template records used while capturing Technical Attributes.</description>
    <label>Technical Attribute Template</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technical Attribute Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>