force-app/main/default/objects/SVMXA360__SM_TA_Template__c/fields/SVMXA360__CategorySequenceJSON__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CategorySequenceJSON__c</fullName>
    <description>Stores the sequence of the categories under the template.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Category Sequence JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>