force-app/main/default/objects/SVMXA360__SM_TA_Template__c/listViews/SVMXA360__AllTechnicalAttributeTemplates.listView-meta.xml
<ListView>
    <fullName>SVMXA360__AllTechnicalAttributeTemplates</fullName>
    <columns>NAME</columns>
    <columns>SVMXA360__Description__c</columns>
    <columns>SVMXA360__DeveloperName__c</columns>
    <columns>SVMXA360__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>A360 - All Technical Attribute Templates</label>
</ListView>